# signal-bot-cot

./: .gitignore  README.md  env.sh  pyproject.toml
src/: logger.py  main.py  settings.py
src/application/pytak/: adapter.py  setup.py
src/application/raw_sockets/: adapter.py
src/application/signal/: bot.py  command.py
src/core/: models.py  services.py  utils.py
src/core/cot/: choices.py
taky-server/: Dockerfile  docker-compose.yaml
